kustomize/overlay/prod/iwiick-brean-and-brew-local-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-brean-and-brew-local-prod
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_2db65eb5-fb3b-48f3-a016-1edf7e9e473c
    environmentId: env_2f8d71c0-01e8-4ae7-8cf4-4d209df82192
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_2f8d71c0-01e8-4ae7-8cf4-4d209df82192
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
